[gd_scene load_steps=19 format=3 uid="uid://c03tvi8gg1bqo"]

[ext_resource type="Script" path="res://scripts/CharacterBody2D.gd" id="1_xp8mp"]
[ext_resource type="Texture2D" uid="uid://c53y171jstvc3" path="res://graphics/enemies/goblin_idle_sprite_frames.png" id="2_24k74"]
[ext_resource type="Texture2D" uid="uid://dcnyfs532a48l" path="res://graphics/enemies/goblin_run_sprite_frames.png" id="3_jmyo2"]
[ext_resource type="Script" path="res://components/HitboxComponent.gd" id="4_jq83y"]
[ext_resource type="Script" path="res://components/HealthComponent.gd" id="5_h26kn"]
[ext_resource type="Script" path="res://components/DamageFlashComponent.gd" id="6_iwm5q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_b3y4g"]
atlas = ExtResource("2_24k74")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jex15"]
atlas = ExtResource("2_24k74")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymh8k"]
atlas = ExtResource("2_24k74")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qrwqk"]
atlas = ExtResource("2_24k74")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_exxjn"]
atlas = ExtResource("3_jmyo2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nyru3"]
atlas = ExtResource("3_jmyo2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e42o"]
atlas = ExtResource("3_jmyo2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pvll"]
atlas = ExtResource("3_jmyo2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3olr"]
atlas = ExtResource("3_jmyo2")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqckt"]
atlas = ExtResource("3_jmyo2")
region = Rect2(80, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_nlsui"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3y4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jex15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymh8k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qrwqk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_exxjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nyru3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e42o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pvll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3olr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqckt")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gcg21"]
radius = 3.0
height = 12.0

[node name="Goblin" type="CharacterBody2D"]
script = ExtResource("1_xp8mp")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_nlsui")
animation = &"run"
autoplay = "default"
frame_progress = 0.359501

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_gcg21")

[node name="Run_Walk" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="HitBoxComponent" type="Area2D" parent="." node_paths=PackedStringArray("healthComponent", "damageFlashComponent")]
collision_layer = 2
collision_mask = 9
script = ExtResource("4_jq83y")
healthComponent = NodePath("../HealthComponent")
damageFlashComponent = NodePath("../DamageFlashComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxComponent"]
shape = SubResource("CapsuleShape2D_gcg21")

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource("5_h26kn")

[node name="DamageFlashComponent" type="Node2D" parent="." node_paths=PackedStringArray("sprite")]
script = ExtResource("6_iwm5q")
sprite = NodePath("../AnimatedSprite2D")

[node name="HitTimer" type="Timer" parent="."]

[connection signal="timeout" from="Run_Walk" to="." method="_on_run_walk_timeout"]
[connection signal="area_entered" from="HitBoxComponent" to="." method="_on_hit_box_component_area_entered"]
[connection signal="timeout" from="HitTimer" to="." method="_on_hit_timer_timeout"]
